--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  padding: 20px 25px;
   background-color: rgb(94, 55, 74);
   color: white;
   font-family: 'Roboto', sans-serif;
@@ -14,4 +13,9 @@ body {
 a {
   text-decoration: none;
   color: white;
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
 }
