--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -88,3 +88,25 @@
   filter: brightness(90%);
   transition: filter 0.2s;
 }
+
+/* ~~~~~~~~~~GAME PAGE~~~~~~~~~~ */
+
+.main-img {
+  width: 100%;
+  cursor: crosshair;
+}
+
+#target-box {
+  display: none;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255, 0.4);
+  border: dashed 3px white;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 80px;
+  cursor: crosshair;
+}
