Make image stretch to bottom of page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -91,8 +91,13 @@
 
 /* ~~~~~~~~~~GAME PAGE~~~~~~~~~~ */
 
+.game-page {
+  display: flex;
+}
+
 .main-img {
   width: 100%;
+  height: auto;
   cursor: crosshair;
 }
 
