--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 25px;
+  background-color: rgb(94, 55, 74);
+  position: relative;
+  z-index: 10;
 }
 
 .header h1 {
@@ -91,14 +94,11 @@
 
 /* ~~~~~~~~~~GAME PAGE~~~~~~~~~~ */
 
-.game-page {
-  display: flex;
-}
-
 .main-img {
   width: 100%;
   height: auto;
   cursor: crosshair;
+  display: block;
 }
 
 #target-box {
