--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -120,15 +120,22 @@
   display: none;
   background-color: rgb(94, 55, 74);
   border-radius: 7px;
-  text-align: center;
   overflow: hidden;
 }
 
 .dropdown-item {
-  padding: 10px 25px;
+  padding: 7px 10px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .dropdown-item:hover {
   background-color: rgb(109, 65, 86);
+}
+
+.dropdown-item img {
+  width: 50px;
+  border-radius: 50%;
 }
