--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,10 @@
+.home-page,
+.game-page,
+.leaderboard-page,
+.about-page {
+  padding-top: 82px;
+}
+
 /* ~~~~~~~~~~HEADER~~~~~~~~~~ */
 
 .header {
@@ -8,6 +15,8 @@
   background-color: rgb(94, 55, 74);
   position: relative;
   z-index: 10;
+  position: fixed;
+  width: 100%;
 }
 
 .header h1 {
@@ -97,7 +106,7 @@
 .items-to-find {
   display: flex;
   gap: 20px;
-  position: absolute;
+  position: fixed;
   padding: 20px 25px;
   top: 0;
   right: 0;
@@ -172,4 +181,8 @@
 .dropdown-item img {
   width: 50px;
   border-radius: 50%;
+}
+
+.hidden {
+  display: none;
 }
