--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -240,3 +240,71 @@
     opacity: 0;
   }
 }
+
+/* ~~~~~~~~~~END GAME POPUP~~~~~~~~~~ */
+
+.blocker {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
+  clip-path: inset(0 -100vmax);
+}
+
+.end-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.end-popup {
+  border-radius: 10px;
+  background-color: rgb(206, 168, 255);
+  color: rgb(87, 52, 69);
+  padding: 20px;
+  text-align: center;
+  font-size: 18px;
+  animation: grow 0.3s linear 1;
+}
+
+.timer-text {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.form-group {
+  padding: 15px 0;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input {
+  width: 100%;
+  border: none;
+  font-size: 18px;
+  border-radius: 5px;
+  padding: 5px 7px;
+  color: rgb(87, 52, 69);
+  outline: rgb(87, 52, 69) 1px solid;
+}
+
+.form-group input:focus {
+  outline: rgb(87, 52, 69) 2px solid;
+}
+
+.entry-form button {
+  font-size: 16px;
+  background-color: rgb(94, 55, 74);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 7px 15px;
+  cursor: pointer;
+}
