--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -148,7 +148,7 @@
 }
 
 #target-box {
-  display: none;
+  position: absolute;
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -164,7 +164,7 @@
 }
 
 #dropdown {
-  display: none;
+  position: absolute;
   background-color: rgb(94, 55, 74);
   border-radius: 7px;
   overflow: hidden;
