--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -349,25 +349,37 @@
   box-shadow: 0 2px 20px white;
 }
 
-.leaderboard-container {
+.lb-table {
   max-width: 800px;
   margin: auto;
+  overflow-x: auto;
+}
+
+table {
+  width: 100%;
   border-radius: 8px;
-  background-color: rgb(109, 65, 86);
   overflow: hidden;
+  border-collapse: collapse;
 }
 
-/* maybe cut off date on smaller screens and add ellipses to end of long names */
-
-.lb-entry {
-  display: grid;
-  grid-template-columns: 0.5fr 1fr 0.6fr 0.6fr;
-  justify-content: center;
-  padding: 20px;
-  text-align: left;
-}
-
-.lb-entry.labels {
+thead > tr {
   font-weight: 500;
   background-color: rgb(133, 82, 106);
+}
+
+tbody > tr {
+  background-color: rgb(109, 65, 86);
+}
+
+th,
+td {
+  padding: 15px 20px;
+}
+
+/* ~~~~~~~~~~ABOUT PAGE~~~~~~~~~~ */
+
+.about-page h1 {
+  font-weight: 500;
+  margin: 25px 0;
+  font-size: 28px;
 }
