--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,6 +18,7 @@
   position: fixed;
   width: 100%;
   gap: 10px;
+  box-shadow: 0 1px 15px rgb(66, 37, 52);
 }
 
 .header h1 {
@@ -28,7 +29,7 @@
 
 .nav {
   display: flex;
-  gap: 25px;
+  gap: 10px;
   font-size: 17.5px;
 }
 
@@ -52,7 +53,7 @@
 
 .home-page h2 {
   font-weight: 500;
-  margin: 25px 0;
+  margin: 30px 0 25px;
   font-size: 28px;
 }
 
@@ -330,7 +331,7 @@
 
 .lb-title {
   font-weight: 500;
-  margin: 25px 0;
+  margin: 30px 0 25px;
   font-size: 28px;
 }
 
@@ -345,8 +346,8 @@
 }
 
 .selected {
-  outline: white solid 2px;
-  box-shadow: 0 2px 20px white;
+  outline: white solid 1px;
+  box-shadow: 0 0 15px white;
 }
 
 .lb-table {
@@ -390,7 +391,7 @@ td {
 
 .about-page h1 {
   font-weight: 500;
-  margin: 25px 0;
+  margin: 30px 0 25px;
   font-size: 28px;
 }
 
@@ -432,4 +433,60 @@ td {
   padding: 50px 10px;
   gap: 30px;
   font-size: 18px;
+}
+
+/* ~~~~~~~~~~MEDIA QUERIES~~~~~~~~~~ */
+
+.menu-btn {
+  display: none;
+}
+
+@media (max-width: 525px) {
+  .header {
+    padding: 15px;
+  }
+
+  .nav {
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    flex-direction: column;
+    display: none;
+    background-color: rgb(66, 37, 52);
+    border-radius: 7px;
+    box-shadow: 0 0 10px rgb(66, 37, 52);
+    overflow: hidden;
+    gap: 0;
+  }
+
+  .nav a {
+    padding: 17px 20px;
+    width: 100%;
+    border-radius: 0;
+    text-align: center;
+  }
+
+  .show {
+    display: flex;
+  }
+
+  .menu-btn {
+    display: flex;
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    background-color: rgb(94, 55, 74);
+    border-radius: 7px;
+  }
+
+  .menu-btn:hover {
+    background-color: rgb(109, 65, 86);
+    transition: background-color 0.5s;
+  }
+
+  .menu-btn img {
+    width: 30px;
+    filter: invert(100%) sepia(9%) saturate(7451%) hue-rotate(277deg) brightness(112%)
+      contrast(111%);
+  }
 }
