--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -206,6 +206,7 @@
   left: 50%;
   transform: translateX(-50%);
   font-weight: 500;
+  text-align: center;
   opacity: 0;
   animation: fadeInAndOut 3000ms;
 }
@@ -269,7 +270,7 @@
   padding: 20px;
   text-align: center;
   font-size: 18px;
-  animation: grow 0.3s linear 1;
+  width: 350px;
 }
 
 .timer-text {
@@ -570,5 +571,28 @@ td {
     width: 30px;
     filter: invert(100%) sepia(9%) saturate(7451%) hue-rotate(277deg) brightness(112%)
       contrast(111%);
+  }
+
+  .game-container > div {
+    width: 300px;
+  }
+
+  .game-img {
+    height: 250px;
+  }
+
+  .game-img img {
+    width: 300px;
+    height: 250px;
+  }
+
+  .alert {
+    padding: 12px 17px;
+    font-size: 15px;
+  }
+
+  .end-popup {
+    width: 300px;
+    padding: 15px;
   }
 }
